--- a/assets/css/1313.css
+++ b/assets/css/1313.css
@@ -65,6 +65,13 @@ input[type=number]::-webkit-inner-spin-button {
   padding-top: 4px;
 }
 
+.planner-options-inputgroup-via {
+  padding-top: 4px;
+}
+
+.planner-options-inputgroup-dest {
+  padding-top: 4px;
+}
 
 .planner-options-submitbutton {
   margin-top: 8px;
