Hack to render realtime info

--- a/assets/css/1313.css
+++ b/assets/css/1313.css
@@ -105,3 +105,15 @@ input[type=number]::-webkit-inner-spin-button {
 .grey {
   color: #999;
 }
+
+.delay {
+  color : red;
+}
+
+.early {
+  color : blue;
+}
+
+.ontime {
+  color : green;
+}
