--- a/assets/css/1313.css
+++ b/assets/css/1313.css
@@ -29,11 +29,11 @@
   .planner-options {
     max-width: 730px;
   }
-  
+
   .planner-form {
     margin-top: 80px;
   }
-  
+
   .planner-summary {
     margin-top: 18px;
   }
@@ -100,6 +100,10 @@ input[type=number]::-webkit-inner-spin-button {
 .leg-header-agency-name{
   position: absolute;
   right: 10px;
+}
+
+.step-item {
+  padding-left: 53px;
 }
 
 .grey {
