--- a/assets/css/1313.css
+++ b/assets/css/1313.css
@@ -1,3 +1,55 @@
+/* GENERAL */
+
+html {
+  position: relative;
+  height: 100%;
+}
+
+body {
+  align: center;
+  font: 14px "Open Sans", Helvetica, Arial, sans-serif;
+  color: #47474a;
+  background-color: #b3ddf2;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+a {
+  color: #176FBB;
+}
+
+h3 {
+  margin-bottom: 15px;
+  font-weight: 600;
+}
+
+.main-page {
+  margin-bottom: 15px;
+}
+
+/* NAV */
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.navbar-collapse.collapse {
+  display: block!important;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left !important;
+}
+
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px !important;
+}
+
+.navbar-right {
+  float: right!important;
+}
+
 .plannerpanel {
   background-color : #eeeeee;
 }
@@ -86,6 +138,10 @@ input[type=number]::-webkit-inner-spin-button {
 
 .planner-advice-dateheader{
   text-align: center;
+  padding: 10px 0;
+  background-color: #ffffff;
+  font-weight: bold;
+  border: 1px solid #e5e5e5;
 }
 
 #planner-advice-list{
@@ -103,7 +159,12 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 .step-item {
-  padding-left: 53px;
+  padding-left: 37px;
+}
+
+.glyphicon-chevron-right {
+  padding-right: 5px;
+  color: #428bca
 }
 
 .grey {
@@ -120,4 +181,14 @@ input[type=number]::-webkit-inner-spin-button {
 
 .ontime {
   color : green;
+}
+
+#map {
+  height: 500px;
+  width: 100%;
+  display: none;
+}
+
+#map-toggle {
+  width: 100%;
 }
